group 'edu.eci.ieti'


buildscript {
    ext {
        springBootVersion = '2.0.0.BUILD-SNAPSHOT'
    }
    repositories {
        mavenCentral()
        maven { url "https://repo.spring.io/snapshot" }
        maven { url "https://repo.spring.io/milestone" }
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
        classpath("com.github.jsimone:webapp-runner:8.5.11.3")
    }
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'



version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    maven { url "https://repo.spring.io/snapshot" }
    maven { url "https://repo.spring.io/milestone" }
}

dependencies {
    compile('org.springframework.boot:spring-boot-starter-web')
    compile group: 'org.json', name: 'json', version: '20190722'
    compile group: 'org.webjars', name: 'webjars-locator', version: '0.14'
    compile group: 'org.webjars', name: 'bootstrap', version: '4.1.2'
    compile group: 'org.webjars', name: 'jquery', version: '3.1.0'
    compile group: 'org.webjars', name: 'webjars-locator', version:'0.39'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.10.3'
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '1.4.1.RELEASE'
    compile group: 'org.webjars', name: 'sockjs-client', version: '1.1.2'
    compile group: 'org.webjars', name: 'stomp-websocket', version: '2.3.3'
    compile group: 'org.apache.tomcat.embed',name:'tomcat-embed-websocket','version':'8.5.11'
    implementation('org.springframework.boot:spring-boot-starter-web')  
    implementation('org.springframework.boot:spring-boot-starter-validation')
    implementation('org.springframework.boot:spring-boot-starter-security')
    testImplementation('org.springframework.boot:spring-boot-starter-test')
    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
}
